--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -15,3 +15,10 @@ a, td, span, input {
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a, .ui-widget-header .ui-state-highlight a {
 	color: white;	
 }
+
+.languageSelect {
+}
+
+.loginForm {
+	margin-top: 40px;
+}
