UserDao updated AuthenticationDemoProvider thinned

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -20,5 +20,13 @@ a, td, span, input {
 	margin-bottom: 40px;
 }
 
-.loginForm {
+.loginlabel {
+}
+
+.loginInput{
+	
+}
+
+.loginBtn {
+	margin-top: 20px;
 }
